<resources>
    <string name="app_name">TheMovieApplication</string>
    <string name="lbl_c_cinema_splashscrn"><font color="#00ff6a">C</font> <font color="#666666">cinema</font></string>
    <string name="lbl_verify_your_phone_number">Verify Your Phone Number</string>
    <string name="lbl_verify_info">We will send 6-digit sms code \n to verify your phone number</string>
    <string name="lbl_country_code">Country Code</string>
    <string name="lbl_continue_with_google">Continue With Google</string>
    <string name="lbl_privacy_plolicy"><![CDATA[By clicking, I accept the Terms & Conditions & Privacy Plolicy]]></string>
    <string name="lbl_sent_otp_code">We’ve sent OTP Code</string>
    <string name="lbl_please_enter_otp_code">Please enter 6-digit OTP code \n that sent to your phone number.</string>
    <string name="lbl_enter_otp_code">Enter OTP Code</string>
    <string name="lbl_don_t_receive_otp">Don’t receive OTP?</string>
    <string name="lbl_resend_code"><font color="#00ff6a"> Resend Code</font></string>
    <string name="lbl_comfirm_otp">Comfirm OTP</string>
    <string name="lbl_pick_region">Pick Region</string>
    <string name="title_nav_movies">Movies</string>
    <string name="title_nav_cinema">Cinema</string>
    <string name="title_nav_ticket">Ticket</string>
    <string name="title_nav_profile">Profile</string>
    <string name="lbl_banner_price"><b>10%</b> <font size="10">off \n with KBZ debit card</font></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_now_showing">Now Showing</string>
    <string name="lbl_comming_soon">Comming Soon</string>
    <string name="lbl_censor_rating">Censor Rating</string>
    <string name="lbl_release_date">Release Date</string>
    <string name="lbl_duration">Duration</string>
    <string name="lbl_booing_noti">Get notify as soon as movie \nbooking opens up in your city!</string>
    <string name="lbl_send_notification">Send Notification</string>
    <string name="lbl_story_line">Story Line</string>
    <string name="lbl_cast">Cast</string>
    <string name="lbl_see_details"><u>See Details</u></string>
    <string name="lbl_parking">Parking</string>
    <string name="lbl_online_food">Online Food</string>
    <string name="lbl_wheel_chiar">Wheel Chiar</string>
    <string name="lbl_booking_info">Long press on show timing to see seat class!</string>
    <string name="lbl_grab_a_bite">Grab a bite!</string>
    <string name="lbl_skip">SKIP</string>

    <string name="lbl_movie_name_checkoutscrn"><b>%s</b>(%s)(%s) </string>
    <string name="lbl_cinema_name_checkoutscrn"><font color="#00ff6a">%s : %s</font><font color="#888888">(%s)</font> </string>
    <string name="lbl_tickect_count_checkout_scrn"><font color="#AAAAAA">M-Ticket(</font><font color="#00ff6a">%s</font><font color="#AAAAAA">)</font></string>


    <string name="lbl_convenience_fee">Convenience Fee</string>
    <string name="lbl_food_and_beverage">Food and Beverage</string>
    <string name="lbl_ticket_cancelion_policy">Ticket Cancelion policy</string>
    <string name="lbl_total">Total</string>

    <string name="lbl_ticket_cancelation_policy">Ticket Cancelation Policy</string>
    <string name="lbl_refund_FandB"><![CDATA[100% Refund on F&B]]></string>
    <string name="lbl_refund_ticket">Up to 75% Refund for Tickets</string>
    <string name="lbl_refund_noti_untilhour">-75% refund until 2 hours before show\n start time</string>
    <string name="lbl_50percent_refund">-50% refund between 2 hours and 20 minutes before show start time</string>
    <string name="lbl_refund_noti_notavailable">1. Refund not available for Convenience \nfees,Vouchers, Gift Cards, Taxes etc.</string>
    <string name="lbl_nocancelation_noti">2. No cancelation within 20minute of show \nstart time.</string>
    <string name="lbl_unlock_offer_applay_promocode">Unlock Offer or Apply Promocode</string>
    <string name="lbl_choose_your_payment_type">Choose your payment type</string>

    <string name="lbl_ticket_type_confirmation_scrn"><b><font color="#ffffff">%s</font></b><font color="#888888">(%s)</font> </string>
    <string name="lbl_done">DONE</string>
    <string name="lbl_login_or_sign_up">Login or Sign Up</string>
    <string name="lbl_purchae_history">Purchae History</string>
    <string name="lbl_offer">Offer</string>
    <string name="lbl_gift_card">Gift Card</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_payment">Payment</string>
    <string name="lbl_help_and_support">Help and Support</string>
    <string name="lbl_your_selection">Your Selection</string>
    <string name="lbl_taken">Taken</string>
    <string name="lbl_availible">Availible</string>
    <string name="lbl_2d">2D</string>
    <string name="lbl_3d">3D</string>
    <string name="lbl_3d_imax">3D IMAX</string>
    <string name="lbl_3d_dbox">3D DBOX</string>
    <string name="lbl_filling_fast">Filling Fast</string>
    <string name="lbl_almost_full">Almost Full</string>
    <string name="lbl_screen">SCREEN</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_cities">Cities</string>
    <string name="lbl_your_name">Your Name</string>
    <string name="lbl_enter_your_name">Enter your name</string>
    <string name="lbl_search_the_movie">search the movie</string>
    <string name="lbl_genres">Genres</string>
    <string name="lbl_format">Format</string>
    <string name="lbl_month">Month</string>
    <string name="lbl_refund_amout">Refund Amout</string>
    <string name="lbl_cinema_details">Cinema Details</string>
    <string name="lbl_facilities">Facilities</string>
    <string name="lbl_ticket_cancelation">Ticket Cancelation</string>
    <string name="lbl_safety">Safety</string>
    <string name="lbl_thermanal_scannig">Thermanal Scannig</string>
    <string name="lbl_contactless_security_check">Contactless Security Check</string>
    <string name="slbl_santization_before_every_show">Santization Before Every Show</string>
    <string name="lbl_disposable_3d_glass">Disposable 3D glass</string>
    <string name="lbl_contactless_food_serviec">Contactless Food Serviec</string>
    <string name="lbl_package_food">Package Food</string>
    <string name="lbl_deep_cleaning_of_rest_room">Deep Cleaning of rest room</string>
    <string name="lbl_price_range">Price Range</string>
    <string name="lbl_show_times">Show Times</string>
    <string name="lbl_checkout">Checkout</string>
    <string name="lbl_are_you_sure_to_logout">Are You Sure to Logout?</string>
    <string name="btn_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="releasing_in_5days">Releasing in %s days</string>
    <string name="ticketCountLabel">%s Tickets</string>
    <string name="order_snack_price">%s KS</string>
</resources>