<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_movie"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_movie"
        android:title="@string/title_nav_movies" />

    <item
        android:id="@+id/navigation_cinema"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_cinema"
        android:title="@string/title_nav_cinema" />

    <item
        android:id="@+id/navigation_ticket"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_ticket"
        android:title="@string/title_nav_ticket" />
    <item
        android:id="@+id/navigation_profile"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_user"
        android:title="@string/title_nav_profile" />

</menu>