<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:background="@drawable/bg_logout_dialog"
        android:padding="@dimen/margin_medium_3"
        android:layout_width="@dimen/dimen_300dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvLogout"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/inter_bold"
            android:text="@string/lbl_are_you_sure_to_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnYes"
            android:backgroundTint="@color/colorAccent"
            android:layout_below="@+id/tvLogout"
            app:cornerRadius="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:textColor="@color/black"
            android:text="@string/btn_yes"
            android:paddingTop="@dimen/dimen_10dp"
            android:paddingBottom="@dimen/dimen_10dp"
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNo"

            android:layout_below="@+id/tvLogout"
            android:backgroundTint="@color/colorPrimaryLight"
            android:layout_alignParentEnd="true"
            app:cornerRadius="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:textColor="@color/black"
            android:text="@string/lbl_no"
            android:paddingTop="@dimen/dimen_10dp"
            android:paddingBottom="@dimen/dimen_10dp"
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

