<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color111111"
    tools:context=".activities.CinemaTimeSlotActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginLeft="@dimen/margin_medium_2">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBackBookingScrn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_22dp"
                android:scaleType="centerCrop"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_baseline_arrow_back_ios_white_24dp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivLocationBookingScrn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_toStartOf="@id/tvSelectedCityBookingScrn"
                app:srcCompat="@drawable/ic_location_white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSelectedCityBookingScrn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:layout_toStartOf="@id/ivSearchBookingScrn"
                android:paddingBottom="@dimen/dimen_5dp"
                android:text="Yangon"
                android:fontFamily="@font/inter_bold"
                android:textColor="@color/white"
                android:textStyle="italic" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivSearchBookingScrn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:layout_toStartOf="@id/ivFilterBookingScrn"
                app:srcCompat="@drawable/ic_baseline_search_white_24dp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivFilterBookingScrn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/margin_medium_2"
                app:srcCompat="@drawable/ic_baseline_filter_alt_white_24dp" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_100dp"
            android:clipToPadding="false"
            android:paddingEnd="@dimen/margin_medium_2" />

        <!--    movie view type-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_60dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTwoD"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_30dp"
                android:layout_margin="@dimen/margin_medium_2"
                android:background="@drawable/bg_movie_view_type"
                android:paddingTop="@dimen/dimen_5dp"
                android:paddingBottom="@dimen/dimen_5dp"
                android:paddingStart="@dimen/dimen_13dp"
                android:paddingEnd="@dimen/dimen_13dp"
                android:text="@string/lbl_2d"
                android:fontFamily="@font/inter_bold"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvThreeD"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_30dp"
                android:layout_margin="@dimen/margin_medium_2"
                android:background="@drawable/bg_movie_view_type"
                android:paddingTop="@dimen/dimen_5dp"
                android:paddingBottom="@dimen/dimen_5dp"
                android:paddingStart="@dimen/dimen_13dp"
                android:paddingEnd="@dimen/dimen_13dp"
                android:text="@string/lbl_3d"
                android:fontFamily="@font/inter_bold"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvThreeDImax"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_30dp"
                android:layout_margin="@dimen/margin_medium_2"
                android:background="@drawable/bg_movie_view_type"
                android:paddingTop="@dimen/dimen_5dp"
                android:paddingBottom="@dimen/dimen_5dp"
                android:paddingStart="@dimen/dimen_13dp"
                android:paddingEnd="@dimen/dimen_13dp"
                android:text="@string/lbl_3d_imax"
                android:fontFamily="@font/inter_bold"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv3DDBOX"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_30dp"
                android:layout_margin="@dimen/margin_medium_2"
                android:background="@drawable/bg_movie_view_type"
                android:paddingTop="@dimen/dimen_5dp"
                android:paddingBottom="@dimen/dimen_5dp"
                android:paddingStart="@dimen/dimen_13dp"
                android:paddingEnd="@dimen/dimen_13dp"
                android:text="@string/lbl_3d_dbox"
                android:fontFamily="@font/inter_bold"
                android:textColor="@color/white" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--                color status-->
            <LinearLayout
                android:id="@+id/llMovieSeatStatus"
                android:background="@color/color222222"
                android:layout_marginBottom="@dimen/dimen_15dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivDot"
                    android:layout_width="@dimen/dimen_10dp"
                    android:layout_height="@dimen/dimen_10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:elevation="@dimen/dimen_4dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_baseline_circle_white_24dp"
                    app:tint="@color/colorAvailable" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvUA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:elevation="@dimen/margin_small"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/lbl_availible"
                    android:textColor="@color/colorAvailable"
                    android:textSize="@dimen/text_regular_2x" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivDotFillinFast"
                    android:layout_width="@dimen/dimen_10dp"
                    android:layout_height="@dimen/dimen_10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin_xlarge"
                    android:elevation="@dimen/margin_small"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_baseline_circle_white_24dp"
                    app:tint="@color/colorFillingFast" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvFillingFast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:elevation="@dimen/margin_small"
                    android:text="@string/lbl_filling_fast"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/colorFillingFast"
                    android:textSize="@dimen/text_regular_2x" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivDotAlmostFull"
                    android:layout_width="@dimen/dimen_10dp"
                    android:layout_height="@dimen/dimen_10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin_xlarge"
                    android:elevation="@dimen/margin_small"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_baseline_circle_white_24dp"
                    app:tint="@color/colorAlmostFull" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAlmostFull"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:elevation="@dimen/margin_small"
                    android:text="@string/lbl_almost_full"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/colorAlmostFull"
                    android:textSize="@dimen/text_regular_2x" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMovieCinemaList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llMovieSeatStatus" />
        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>